# UM_Szachy

ChessEngine/: CMakeLists.txt  ChessBoardWeights.h  MinMax.h  README.md  main.cpp
ChessEngine/chess_rules/: thc.cpp
Cpp/: CMakeLists.txt  main.cpp
Cpp/chess_rules/: chess.cpp  chess.h
Python/: ChessBoard.py  ChessEngine.py  ai.py  main.py
